# gpack

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  aux_void.h  backend.h  base.h  byte.h  cli.h  cli_schema.cpp  cout_context.h  doc.txt  dsl.h  formats.h  gpack.cpp  msgpack.h  optmizer.h  print.h  schema.h  vt.h  vt_builder.h  vt_context.h
cli/: cli.h  cli_driver.cpp  cli_msgpack.cpp  gpack.cpp
include/: backend.h  byte.h  cli_driver.h  decoder.h  equal_to.h  formats.h  ref_table.h  tags.h  vt_serializer.h  vt_to_string.h
include/schema/: msgpack.h  simple.h
json_parser/: json_parser.h  json_parser_tokenizer.h  json_parser_xpr_parser.h
test/: byte.cpp  formats.cpp  serialization.cpp
